<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:background="#E3F2FD"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.happytumiteam.surveypkbl.MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="217dp"
            android:layout_height="130dp"
            android:id="@+id/ic_pelindo"
            android:src="@drawable/pelindologo5"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="50dp"
            android:layout_weight="0.12" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:id="@+id/email" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:id="@+id/password"
            android:fontFamily="sans-serif" />

        <Button
            android:text="LOGIN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_Login"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:background="#2196F3"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="normal|bold"/>

        <!--Forgot your password-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_reset_password"
            android:hint="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:background="@null"
            android:textColor="@color/colorPrimaryDark"
            android:layout_weight="0.11"
            android:fontFamily="sans-serif"
            android:textSize="18sp" />


    </LinearLayout>
</RelativeLayout>

