<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#BBDEFB"
    tools:context="com.happytumiteam.surveypkbl.Setting">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/layoutbox_setting"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="15dp"
            android:ems="10"
            android:id="@+id/edit_text_email"
            android:textStyle="normal|italic"
            android:background="#8EC5F2"            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/hint_pass_lama"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="15dp"
            android:ems="10"
            android:id="@+id/edit_text_pass_lama"
            android:fontFamily="sans-serif"
            android:layout_below="@+id/email"
            android:layout_alignParentStart="true"
            android:background="#8EC5F2"
            android:textStyle="normal|italic" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/hint_pass_baru"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="15dp"
            android:ems="10"
            android:id="@+id/edit_text_pass_baru"
            android:fontFamily="sans-serif"
            android:layout_below="@+id/pass_lama"
            android:layout_alignParentStart="true"
            android:background="#8EC5F2"
            android:textStyle="normal|italic" />

    </LinearLayout>

    <Button
        android:text="SIMPAN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginLeft="250dp"
        android:layout_marginRight="10dp"
        android:id="@+id/btn_simpan_pass"
        android:layout_below="@+id/layoutbox_setting"
        android:fontFamily="sans-serif"
        android:background="#2196F3"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

</RelativeLayout>
